# translitcyrlat

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.cmake.in  doxygen.cmake.in  git.cmake.in  install.cmake.in  libconf.cmake.in  settings.cmake.in  src.cmake.in  targets.cmake.in  tests.cmake.in
cmake/doxygen/: doxyfile.in  doxygen_settings.cmake.in
docs/: doxyfile.in
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
src/: translitcyrlat.cpp  translitcyrlat.h
tests/: test_translytcyrlat.cpp
